[metadata]
name               = SMBL
author             = Karel Břinda
author-email       = karel.brinda@gmail.com
summary            = SnakeMake Bioinformatics Library.
description-file   = README.rst
home-page          = http://github.com/karel-brinda/smbl
requires-python    = >=3.2
license            = MIT
keywords           = Bioinformatics, Computational Biology, Next-Generation Sequencing, Snakemake, Pipelines
zip_safe           = False
supported-platform = Linux, MacOS, CygWin
classifier =
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	Operating System :: Unix
	Topic :: Scientific/Engineering :: Bio-Informatics

[files]
packages =
	smbl
	smbl.fasta
	smbl.prog
	smbl.prog.plugins
	smbl.messages
extra_files =
	setup.py
	README.rst

[global]
setup-hooks = pbr.hooks.setup_hook

[pbr]
warnerrors = True
